[package]
name = "ffi-convert-derive"
version = "0.1.1"
authors = ["Sonos"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Macros implementations of CReprOf, AsRust, CDrop traits from ffi-convert"
repository = "https://github.com/snipsco/snips-utils-rs"
readme = "../README.md"
keywords = ["ffi"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.2"
proc-macro2 = "1.0.6"
syn = "1.0.16"

[dev-dependencies.syn]
version = "1.0.16"
features = ["extra-traits"]