[package]
name = "ffi-convert-extra-ctypes"
version = "0.8.0-pre"
authors = ["Sonos", "Anthony Reinette", "Thibaut Lorrain"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Extra C-compatible utility types for ffi-convert mirroring std types."
repository = "https://github.com/sonos/ffi-convert-rs"
readme = "../README.md"
keywords = ["ffi"]

[dependencies]
ffi-convert = { path = "../ffi-convert" }
libc = "0.2"
