[package]
name = "ffi-convert-tests"
version = "0.7.0-pre"
authors = ["Sonos"]
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
anyhow = "1.0.32"
ffi-convert = { path ="../ffi-convert" }
libc = "0.2.66"

[features]
asan = []
msan = []

[dev-dependencies]
cbindgen = "0.29"
cc = "1"
