[package]
name = "ffi-convert"
version = "0.8.0-pre"
authors = ["Sonos"]
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A collection of utilities to ease conversion between Rust and C-compatible data structures."
repository = "https://github.com/sonos/ffi-convert-rs"
readme = "../README.md"
keywords = ["ffi"]

[dependencies]
ffi-convert-derive = { path = "../ffi-convert-derive" }
thiserror = "2.0.12"
libc = "0.2"
